PMD code refactoring
git-svn-id: https://svn.intranet.ydp/ydp/projects/empiria/player/trunk/empiria.player@110695 3e83ccf1-c6ce-0310-9054-8fdb33cf0640