@@ -5,12 +5,12 @@ import java.util.Map;
 
 public class FeedbackInteractionMuteEvent extends FeedbackInteractionEvent {
 
-	boolean mute;
-	
+	protected boolean mute;
+
 	public FeedbackInteractionMuteEvent(boolean mute){
 		this.mute = mute;
 	}
-	
+
 	@Override
 	public InteractionEventType getType() {
 		return InteractionEventType.FEEDBACK_MUTE;
@@ -18,9 +18,9 @@ public class FeedbackInteractionMuteEvent extends FeedbackInteractionEvent {
 
 	@Override
 	public Map<String, Object> getParams() {
-		Map<String, Object> p = new HashMap<String, Object>();
-		p.put("mute", new Boolean(mute));
-		return p;
+		Map<String, Object> params = new HashMap<String, Object>();
+		params.put("mute", Boolean.valueOf(mute));
+		return params;
 	}
 
 }
